// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawing Layer Components Ellipse adds a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <ellipse
      cx="10"
      cy="10"
      fill="#cccccc"
      pointer-events="visible"
      rx="10"
      ry="10"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Ellipse deletes a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Ellipse moves a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <ellipse
      cx="5"
      cy="5"
      fill="#cccccc"
      pointer-events="visible"
      rx="10"
      ry="10"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Freehand Line adds a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <path
      d="M 10 10 l 1 1 l 2 2"
      fill="none"
      fill-rule="nonzero"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Freehand Line deletes a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Freehand Line moves a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <path
      d="M 5 5 l 1 1 l 2 2"
      fill="none"
      fill-rule="nonzero"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Image adds an image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <image
      height="10"
      href="my/image/url"
      pointer-events="visible"
      preserveAspectRatio="none"
      width="10"
      x="10"
      y="10"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Image deletes a image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Image moves a image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <image
      height="10"
      href="my/image/url"
      pointer-events="visible"
      preserveAspectRatio="none"
      width="10"
      x="5"
      y="5"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Rectangle adds a Rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <rect
      class="rectangle"
      fill="#cccccc"
      height="10"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
      width="10"
      x="10"
      y="10"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Rectangle deletes a rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Rectangle moves a rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <rect
      class="rectangle"
      fill="#cccccc"
      height="10"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
      width="10"
      x="5"
      y="5"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line adds a Vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="vector"
      fill="#888888"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
    >
      <line
        x1="10"
        x2="20"
        y1="10"
        y2="20"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line deletes a vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Vector line moves a vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="vector"
      fill="#888888"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
    >
      <line
        x1="5"
        x2="15"
        y1="5"
        y2="15"
      />
    </g>
  </g>
</svg>
`;
